syntax = "proto3";

option csharp_namespace = "DiscountMicroService.Proto";

	service DiscountServiceProto{
	rpc GetDiscountByCode(RequestGetDiscountByCode) returns (ResultGetDiscountByCode);
	rpc GetDiscountByID(RequestGetDiscountById) returns (ResultGetDiscountByCode);
	rpc useDisCount(RequestUseDiscount) returns(ResultUseDiscount);
	rpc AddNewDiscount(RequestAddNewDiscount) returns(ResultAddNewDiscount);

	}	

	message RequestGetDiscountByCode{
		string Code = 1;
	}

	message RequestGetDiscountById{
		string Id =1;
	}

	message ResultGetDiscountByCode{
		DiscountInfo Data = 1;
		bool IsSuccess=2;
		string Message=3;
	}

	message DiscountInfo{
		string id =1;
		int32 Amount = 2;
		string Code = 3;
		bool Used =4;
	}

	message RequestUseDiscount{
		string id =1;
	}

	message ResultUseDiscount{
		bool IsSuccess = 1;
	}

	message RequestAddNewDiscount{
		int32 Amount =1;
		string Code = 2;
	}

	message ResultAddNewDiscount{
		bool IsSuccess = 1;
	}
